Added not found functionality

--- a/DotNetAssessmentLuisCarlosNoguera/Views/Home/Character.cshtml
+++ b/DotNetAssessmentLuisCarlosNoguera/Views/Home/Character.cshtml
@@ -53,12 +53,19 @@
                 <h2 class="text-center text-white"> <i class="fa fa-bolt mr-1"></i> Powerstats </h2>
             </div>
             <div class="card-body font-weight-bold pt-2">
-                <p class="mb-2">Intelligence: <small>@Model.Powerstats.Intelligence</small> </p>
-                <p class="mb-2">Strength: <small> @Model.Powerstats.Strength</small> </p>
-                <p class="mb-2">Speed: <small> @Model.Powerstats.Speed</small> </p>
-                <p class="mb-2">Durability: <small> @Model.Powerstats.Durability</small> </p>
-                <p class="mb-2">Power: <small> @Model.Powerstats.Power</small> </p>
-                <p class="mb-2">Combat: <small> @Model.Powerstats.Combat</small> </p>
+                <p class="mb-2">
+                    <span>Intelligence: <small>@Model.Powerstats.Intelligence</small> </span>
+                    <span class="float-right ml-3">Strength: <small> @Model.Powerstats.Strength</small> </span>
+                </p>
+                <p class="mb-2">
+                    <span">Durability: <small> @Model.Powerstats.Durability</small> </span>
+                    <span class="float-right ml-3">Speed: <small> @Model.Powerstats.Speed</small> </span>
+                </p>
+                <p class="mb-2">
+                    <span>Power: <small> @Model.Powerstats.Power</small> </span>
+                    <span class="float-right ml-3">Combat: <small> @Model.Powerstats.Combat</small> </span>
+                </p>
+
                 <h4 class="bg-primary text-white text-center">
                     <i class="fa fa-briefcase mr-1"></i>
                     Work
