--- a/DotNetAssessmentLuisCarlosNoguera/Views/Home/_SearchCharacter.cshtml
+++ b/DotNetAssessmentLuisCarlosNoguera/Views/Home/_SearchCharacter.cshtml
@@ -1,6 +1,6 @@
 ﻿@using (Html.BeginForm("Index", "Home", FormMethod.Get))
 {
-    <div class="col-10 mx-auto pb-3 mt-3">
+    <div class="col-10 mx-auto pb-3">
         <div class="input-group">
             <input type="text"
                    name="characterName"
