--- a/DotNetAssessmentLuisCarlosNoguera/Views/Home/Index.cshtml
+++ b/DotNetAssessmentLuisCarlosNoguera/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 @if (Model.Results == null && TempData.Peek("searchTerm") == null)
 {
-    <img class="img-fluid mb-3" src="~/images/HeroesAndVillains.png" alt="All SuperHeroes Image" />
+    <img class="img-fluid mb-3 pt-xl-0 pt-lg-0 pt-md-0 pt-sm-4 pt-5" src="~/images/HeroesAndVillains.png" alt="All SuperHeroes Image" />
 }
 
 <partial name="_SearchCharacter" />
