Renamed web project, updated namespaces and some clean up.

--- a/SuperHeroesAndVillainsApp.Web/Views/Shared/_Layout.cshtml
+++ b/SuperHeroesAndVillainsApp.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DotNetAssessmentLuisCarlosNoguera</title>
+    <title>@ViewData["Title"] - SupperHeroesAndVillainsApp </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
 
     <div class="footer border-top text-white pt-3 bg-primary">
         <div class="container text-center pb-2">
-            &copy; 2020 - DotNetAssessment - Luis Carlos Noguera
+            &copy; @DateTime.Now.Year - SupperHeroes And Villains App by Luis Carlos Noguera
         </div>
     </div>
     @RenderSection("Scripts", required: false)
