Removed unneeded interface and tempdata check.

--- a/SuperHeroesAndVillainsApp.Web/Views/Home/Index.cshtml
+++ b/SuperHeroesAndVillainsApp.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@if (Model.Results == null && TempData.Peek("searchTerm") == null)
+@if (Model.Results == null)
 {
     <img class="img-fluid mb-3 pt-xl-0 pt-lg-0 pt-md-0 pt-sm-4 pt-5" src="~/images/HeroesAndVillains.png" alt="All SuperHeroes Image" />
 }
